--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit==1.30.0
-pandas==1.5.3
+pandas==2.3.0
 joblib==1.4.2
-shap==0.45.1
-numpy==1.24.3
-pillow==10.0.0
 matplotlib==3.10.0
-scikit-learn==1.5.1
+numpy==1.26.4
+scikit-learn==1.6.1
+Pillow==10.4.0
+shap==0.45.1
